// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination[Base] should render correctly  1`] = `
<div
  class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
>
  <div
    class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
  >
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      10
    </button>
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about align 1`] = `
<div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination c-366cz8 soui-pagination-center"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination c-khr86z soui-pagination-right"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about control 1`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <span
      style="font-size: 14px;"
    >
      Jump to
    </span>
    <div
      class="c-8fzkdt soui-input-wrapper-number c-mm3jkq soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 80px; margin-left: 8px;"
    >
      <div
        class="cdk4afh soui-input-wrapper-inner-title-top c-t4daa5 soui-input-wrapper-inner-title-bottom c-yi6xxc soui-input-wrapper-padding-box c-x9i7lg soui-input-content"
      >
        <input
          class="c-x7d2ar soui-input-input"
          type="text"
          value="1"
        />
      </div>
      <div
        class="c-s1ojpa soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about disabled 1`] = `
<div
  class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
>
  <div
    class="c-5pee9e soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
  >
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button c-jronn9 soui-button-disabled cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      1
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      2
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      3
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      4
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      5
    </button>
    <button
      class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      50
    </button>
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="c-5pee9e soui-pagination-section cyjoq2e soui-pagination-size-list"
  >
    <div
      class="cxj1wt6 soui-select-wrapper c-plasju soui-select-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="ctottml soui-select-result-wrapper cbdcwz8 soui-select-wrapper-padding-box ccqbq55 soui-select-wrapper-inner-title-top cyqpq07 soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="clfred2 soui-select-result"
        >
          <div
            class="cpgwbww soui-select-result-text-wrapper"
          >
            <span
              class="cbg099m soui-select-ellipsis"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="cmh1eld soui-select-icon-wrapper"
        >
          <span
            class="crz1ezt soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-5pee9e soui-pagination-section cdwzbm soui-pagination-jumper"
  >
    <span
      class="c-5pee9e soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="c-5pee9e soui-pagination-section c-qd0hd4 soui-pagination-jumper-input c-mm3jkq soui-input-wrapper cievc1u soui-input-wrapper-disabled"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="cdk4afh soui-input-wrapper-inner-title-top c-t4daa5 soui-input-wrapper-inner-title-bottom c-yi6xxc soui-input-wrapper-padding-box c-x9i7lg soui-input-content"
      >
        <input
          class="c-x7d2ar soui-input-input"
          disabled=""
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c-5pee9e soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about jumper 1`] = `
<div
  class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
>
  <div
    class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
  >
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      10
    </button>
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="c-5pee9e soui-pagination-section cdwzbm soui-pagination-jumper"
  >
    <span
      class="c-5pee9e soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="c-5pee9e soui-pagination-section c-qd0hd4 soui-pagination-jumper-input c-mm3jkq soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="cdk4afh soui-input-wrapper-inner-title-top c-t4daa5 soui-input-wrapper-inner-title-bottom c-yi6xxc soui-input-wrapper-padding-box c-x9i7lg soui-input-content"
      >
        <input
          class="c-x7d2ar soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c-5pee9e soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about mode 1`] = `
<div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled capjo2b soui-button-outline cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about simple 1`] = `
<div
  class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
>
  <button
    class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
    disabled=""
    type="button"
  >
    <span
      class="chnxsc0 soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
        />
      </svg>
    </span>
  </button>
  <div
    class="c-5pee9e soui-pagination-section cdwzbm soui-pagination-jumper"
  >
    <div
      class="c-5pee9e soui-pagination-section c-qd0hd4 soui-pagination-jumper-input c-mm3jkq soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="cdk4afh soui-input-wrapper-inner-title-top c-t4daa5 soui-input-wrapper-inner-title-bottom c-yi6xxc soui-input-wrapper-padding-box c-x9i7lg soui-input-content"
      >
        <input
          class="c-x7d2ar soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c-5pee9e soui-pagination-section c-kh2uyl soui-pagination-split"
    >
      /
    </span>
    <span
      class="c-5pee9e soui-pagination-section"
    >
      5
    </span>
  </div>
  <button
    class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
    type="button"
  >
    <span
      class="chnxsc0 soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Pagination[Base] should render correctly about size 1`] = `
<div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left c-kh500g soui-pagination-small"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-ou9rhk soui-button-small"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left c-kl6vj0 soui-pagination-large"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        5
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square c-oybn04 soui-button-large"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about span 1`] = `
<div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        6
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        7
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
  >
    <div
      class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
    >
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        6
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        7
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        8
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        9
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        11
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        12
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        13
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        14
      </button>
      <button
        class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        100
      </button>
      <button
        class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
        type="button"
      >
        <span
          class="chnxsc0 soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about text 1`] = `
<div
  class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
>
  <div
    class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
  >
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text"
      disabled=""
      type="button"
    >
      <span>
        Previous
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      26
    </button>
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
  <div
    class="c-5pee9e soui-pagination-section cyjoq2e soui-pagination-size-list"
  >
    <div
      class="cxj1wt6 soui-select-wrapper"
      data-soui-input-border="true"
      tabindex="0"
    >
      <div
        class="ctottml soui-select-result-wrapper cbdcwz8 soui-select-wrapper-padding-box ccqbq55 soui-select-wrapper-inner-title-top cyqpq07 soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="clfred2 soui-select-result"
        >
          <div
            class="cpgwbww soui-select-result-text-wrapper"
          >
            <span
              class="cbg099m soui-select-ellipsis"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="cmh1eld soui-select-icon-wrapper"
        >
          <span
            class="crz1ezt soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-5pee9e soui-pagination-section"
  >
    <span>
      1 to 10 of 256 items
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about total 1`] = `
<div
  class="ch4huvl soui-pagination-pagination chnzqke soui-pagination-left"
>
  <div
    class="c-5pee9e soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="c-5pee9e soui-pagination-section c-yaqhau soui-pagination-buttons"
  >
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c-jronn9 soui-button-disabled c1hnj3w soui-button-text cbcdnsc soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cnsrtqr soui-button-primary c3ct0ht soui-button-button cbcdnsc soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      50
    </button>
    <button
      class="c-5pee9e soui-pagination-section ch4u2jz soui-pagination-section-size c1l5xzw soui-pagination-button-item cg2l11h soui-button-secondary c3ct0ht soui-button-button c1hnj3w soui-button-text cbcdnsc soui-button-square"
      type="button"
    >
      <span
        class="chnxsc0 soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
